--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,25 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="whatever i want to write about, mostly music reviews."
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+   <!-- Primary Meta Tags -->
+<title>eric has no taste</title>
+<meta name="title" content="eric has no taste">
+<meta name="description" content="a blog of whatever i want to write about, mostly music reviews.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://erichasnotaste.com">
+<meta property="og:title" content="eric has no taste">
+<meta property="og:description" content="a blog of whatever i want to write about, mostly music reviews.">
+<meta property="og:image" content="bread-green.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://erichasnotaste.netlify.app/">
+<meta property="twitter:title" content="eric has no taste">
+<meta property="twitter:description" content="a blog of whatever i want to write about, mostly music reviews.">
+<meta property="twitter:image" content="bread-green.png">
+<link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
