--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
 <meta property="og:url" content="https://erichasnotaste.com">
 <meta property="og:title" content="eric has no taste">
 <meta property="og:description" content="a blog of whatever i want to write about, mostly music reviews.">
-<meta property="og:image" content="bread-green.png">
+<meta property="og:image" content="https://imgur.com/pNrYvck">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://erichasnotaste.netlify.app/">
 <meta property="twitter:title" content="eric has no taste">
 <meta property="twitter:description" content="a blog of whatever i want to write about, mostly music reviews.">
-<meta property="twitter:image" content="bread-green.png">
+<meta property="twitter:image" content="https://imgur.com/pNrYvck">
 <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
