--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 <meta property="og:image" content="https://imgur.com/pNrYvck">
 
 <!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:card" content="summary">
 <meta property="twitter:url" content="https://erichasnotaste.netlify.app/">
 <meta property="twitter:title" content="eric has no taste">
 <meta property="twitter:description" content="a blog of whatever i want to write about, mostly music reviews.">
