--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,16 @@
 <meta name="title" content="eric has no taste">
 <meta name="description" content="a blog of whatever i want to write about, mostly music reviews.">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3XEB59PWSF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3XEB59PWSF');
+</script>
+
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://erichasnotaste.com">
