--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
       <textarea name="message"></textarea>
     </form> -->
 
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <form name="music" netlify netlify-honeypot="bot-field" hidden>
       <input
         type="text"
         id="name"
@@ -97,6 +97,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
   </body>
 </html>
