--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
       <textarea name="message"></textarea>
     </form> -->
 
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <form style="display: none;" name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input
         type="text"
         id="name"
