--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
       content="a blog of whatever i want to write about, mostly music reviews."
     />
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2201800080808151"
+    crossorigin="anonymous"></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
